# zakhenry.com

./: .gitignore  .gitmodules  .travis.yml  BUILD.md  CNAME  README.md  angular.json  config.toml  gulpfile.js  index.html  package.json  styles.css
.github/workflows/: publish.yml
app/: bower.json
app/bower_components/angular-messages/: .bower.json
app/bower_components/lil-uuid/: .bower.json
app/bower_components/lodash/: .bower.json
app/src/: CNAME  index.html
app/src/app/: app.js
app/src/config/: stateManager.js
app/src/styles/: global.less
content/: 2019-06-20-ensuring-accuracy-of-readme-code-snippets.md  2019-06-26-observable-webworkers-with-angular-intro.md  2019-06-30-observable-web-workers-a-deep-dive-into-a-realistic-use-case.md  2019-07-05-tc39-pipeline-proposal-comparison-rxjs-case-study.md  2019-08-18-parallel-computation-in-the-browser-with-observable-webworkers.md
content/2026-01-10-serverless-grpc/: index.md  test.patch
content/2026-01-10-serverless-grpc-with-lambda-grpc-web/: diff.sh  impl.patch  index.md
content/2026-01-10-serverless-grpc-with-lambda-grpc-web/demo/: Cargo.toml  README.md  build.rs
content/2026-01-10-serverless-grpc-with-lambda-grpc-web/demo/tests/: lambda-server.rs
content/blog/: test.rho
content/pages/: about.md  archive.md  resume.md
content/pages/projects/: data.toml  (+1 more)
deploy/: .gitignore  deploy.sh  id_rsa.enc
features/: home.feature
features/support/: world.js
src/: index.html  styles.scss
src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
templates/: resume.html
(+23 files in other folders)
